--- a/scores.html
+++ b/scores.html
@@ -198,16 +198,40 @@ function init() {
 // ── STUDENT MODE ─────────────────────────────────────────────
 function renderStudentMode() {
   var main = document.getElementById('mainContent');
+
+  // Check if student identity is saved
+  var savedCls  = localStorage.getItem('eq_student_class');
+  var savedNo   = localStorage.getItem('eq_student_no');
+  var savedName = localStorage.getItem('eq_student_name');
+
+  if (savedCls && savedNo && savedName) {
+    // Auto-load their scores directly
+    var clsLabel = CLASS_LABELS[savedCls] || savedCls;
+    main.innerHTML =
+      '<div class="mode-badge student">&#128203; ' + savedName.split(' ')[0] + ' &mdash; ' + clsLabel + ' <span onclick="forgetStudent()" style="margin-left:8px;cursor:pointer;opacity:0.7;font-size:0.85em;">&#10005; Not you?</span></div>' +
+      '<div class="chapter-tabs"><button class="ch-tab active" id="stab4" onclick="switchStudentTab(4)">Chapter 4</button><button class="ch-tab" id="stab5" onclick="switchStudentTab(5)">Chapter 5</button></div>' +
+      '<div id="sResult"><div class="state-card"><div class="spinner"></div><div class="state-title">Loading your scores...</div></div></div>';
+
+    currentClass = savedCls;
+    autoLoadStudentScores(savedCls, savedNo, savedName);
+    return;
+  }
+
+  // No identity saved — show picker
   var classOptions = CLASSES.map(function(c) {
     return '<option value="' + c + '"' + (c === currentClass ? ' selected' : '') + '>' + CLASS_LABELS[c] + '</option>';
   }).join('');
 
   main.innerHTML =
     '<div class="mode-badge student">&#128203; Student View</div>' +
-    '<div class="student-picker">' +
-      '<div class="picker-field"><label>Class</label><select id="sClass">' + classOptions + '</select></div>' +
-      '<div class="picker-field"><label>Your Name</label><select id="sStudent"><option value="">-- Select class first --</option></select></div>' +
-      '<button class="btn-view-scores" id="sViewBtn">&#128065; View Scores</button>' +
+    '<div style="background:var(--white);border:1.5px solid var(--border);border-radius:16px;padding:20px 24px;margin-bottom:20px;text-align:center;">' +
+      '<div style="font-size:1.5rem;margin-bottom:8px;">👤</div>' +
+      '<div style="font-family:'Playfair Display',serif;font-size:1rem;font-weight:700;margin-bottom:4px;">Who are you?</div>' +
+      '<div style="font-size:0.82rem;color:var(--text-muted);margin-bottom:16px;">Select your class and name to view your scores</div>' +
+      '<div style="display:flex;gap:10px;flex-wrap:wrap;">' +
+        '<div style="flex:1;min-width:140px;"><select class="filter-select" style="width:100%;" id="sClass">' + classOptions + '</select></div>' +
+        '<div style="flex:2;min-width:180px;"><select class="filter-select" style="width:100%;" id="sStudent"><option value="">-- Select class first --</option></select></div>' +
+      '</div>' +
     '</div>' +
     '<div id="sResult"></div>';
 
@@ -217,14 +241,39 @@ function renderStudentMode() {
     loadStudentList();
     document.getElementById('sResult').innerHTML = '';
   });
-  document.getElementById('sViewBtn').addEventListener('click', viewStudentScores);
-  // Also trigger on select change for faster UX
   document.addEventListener('change', function(e) {
     if (e.target && e.target.id === 'sStudent' && e.target.value) {
       viewStudentScores();
     }
   });
   loadStudentList();
+}
+
+function forgetStudent() {
+  localStorage.removeItem('eq_student_class');
+  localStorage.removeItem('eq_student_no');
+  localStorage.removeItem('eq_student_name');
+  renderStudentMode();
+}
+
+function autoLoadStudentScores(cls, no, name) {
+  Promise.all([
+    apiGet({ action: 'getChapterScores', className: cls, chapter: 4 }),
+    apiGet({ action: 'getChapterScores', className: cls, chapter: 5 })
+  ]).then(function(responses) {
+    var ch4 = responses[0].students ? responses[0].students.find(function(s) { return String(s.no) === String(no); }) : null;
+    var ch5 = responses[1].students ? responses[1].students.find(function(s) { return String(s.no) === String(no); }) : null;
+    var fakeStudent = { name: name, nickname: '' };
+    renderStudentScoreCard(fakeStudent, ch4, ch5, responses[0].inputCols, responses[1].inputCols);
+    // Re-render tabs since renderStudentScoreCard overwrites the container
+    var result = document.getElementById('sResult');
+    if (result) {
+      var tabsDiv = '<div class="chapter-tabs" style="margin-bottom:16px;"><button class="ch-tab active" id="stab4" onclick="switchStudentTab(4)">Chapter 4</button><button class="ch-tab" id="stab5" onclick="switchStudentTab(5)">Chapter 5</button></div>';
+      result.innerHTML = tabsDiv + result.innerHTML;
+    }
+  }).catch(function(e) {
+    document.getElementById('sResult').innerHTML = '<div class="state-card"><div class="state-icon">&#9203;</div><div class="state-title">Connection problem</div><div class="state-sub">' + e.message + '</div></div>';
+  });
 }
 
 function loadStudentList() {
