--- a/index.html
+++ b/index.html
@@ -1084,11 +1084,10 @@
         <div class="card-name">Lesson Materials</div>
         <div class="card-desc">View & download lesson slides</div>
       </a>
-      <a href="assignments.html" class="card" style="opacity:0.6;pointer-events:none;position:relative;">
-        <div style="position:absolute;top:10px;right:10px;background:#F59E0B;color:#fff;font-size:0.6rem;font-weight:700;padding:2px 7px;border-radius:999px;font-family:monospace;letter-spacing:0.05em;">SOON</div>
+      <a href="assignments.html" class="card">
         <div class="card-icon ic-blue">📋</div>
         <div class="card-name">Assignments</div>
-        <div class="card-desc">Coming soon!</div>
+        <div class="card-desc">Download task PDFs & instructions</div>
       </a>
       <a href="submission.html" class="card" style="opacity:0.6;pointer-events:none;position:relative;">
         <div class="card-icon ic-yellow">📝</div>
@@ -2058,9 +2057,9 @@ document.addEventListener('keydown', e => {
       <div class="sidebar-item-icon" style="background:rgba(124,58,237,0.2)">📑</div>
       <div class="sidebar-item-name">Lesson Materials</div>
     </a>
-    <a href="assignments.html" class="sidebar-item" style="opacity:0.5;pointer-events:none;">
+    <a href="assignments.html" class="sidebar-item">
       <div class="sidebar-item-icon" style="background:rgba(59,130,246,0.2)">📋</div>
-      <div class="sidebar-item-name">Assignments <span style="font-size:0.65rem;background:#F59E0B;color:#fff;padding:1px 6px;border-radius:999px;margin-left:4px;font-family:monospace;">SOON</span></div>
+      <div class="sidebar-item-name">Assignments</div>
     </a>
     <a href="submission.html" class="sidebar-item" style="opacity:0.5;pointer-events:none;">
       <div class="sidebar-item-icon" style="background:rgba(245,158,11,0.2)">📝</div>
