--- a/scores.html
+++ b/scores.html
@@ -226,7 +226,7 @@ function renderStudentMode() {
     '<div class="mode-badge student">&#128203; Student View</div>' +
     '<div style="background:var(--white);border:1.5px solid var(--border);border-radius:16px;padding:20px 24px;margin-bottom:20px;text-align:center;">' +
       '<div style="font-size:1.5rem;margin-bottom:8px;">👤</div>' +
-      '<div style="font-family:'Playfair Display',serif;font-size:1rem;font-weight:700;margin-bottom:4px;">Who are you?</div>' +
+      '<div style="font-family:Georgia,serif;font-size:1rem;font-weight:700;margin-bottom:4px;">Who are you?</div>' +
       '<div style="font-size:0.82rem;color:var(--text-muted);margin-bottom:16px;">Select your class and name to view your scores</div>' +
       '<div style="display:flex;gap:10px;flex-wrap:wrap;">' +
         '<div style="flex:1;min-width:140px;"><select class="filter-select" style="width:100%;" id="sClass">' + classOptions + '</select></div>' +
