--- a/students.html
+++ b/students.html
@@ -488,12 +488,12 @@ function loadAllStudents() {
     document.getElementById('countBadge').textContent = totalStudents + ' students';
     updateCount();
 
-    // Auto-open saved student's stats popup
+    // Auto-open saved student's stats popup — no timer, data is already loaded here
     const savedCls  = localStorage.getItem('eq_student_class');
     const savedName = localStorage.getItem('eq_student_name');
     if (savedCls && savedName) {
       const clsMap = { XE1:'XE-1', XE4:'XE-4', XE5:'XE-5', XE6:'XE-6', XE7:'XE-7', XE8:'XE-8', XE9:'XE-9', XE10:'XE-10', XE11:'XE-11' };
-      setTimeout(() => openActModal(savedName, clsMap[savedCls] || savedCls), 400);
+      openActModal(savedName, clsMap[savedCls] || savedCls);
     }
   }).catch(() => {
     document.getElementById('countBadge').textContent = 'Failed to load';
