--- a/scores.html
+++ b/scores.html
@@ -508,7 +508,11 @@ function showBar(msg, type) {
 }
 function hideBar() { document.getElementById('saveBar').className = 'save-bar'; }
 
-init();
+if (document.readyState === 'loading') {
+  document.addEventListener('DOMContentLoaded', init);
+} else {
+  init();
+}
 </script>
 </body>
 </html>
