--- a/tasks.html
+++ b/tasks.html
@@ -257,12 +257,12 @@
       const p  = { ...params, callback: cb, _t: Date.now() };
       const script = document.createElement('script');
       script.async = true;
-      const timer = setTimeout(() => { cleanup(); reject(new Error('Timeout')); }, 20000);
+      const timer = setTimeout(() => { cleanup(); reject(new Error('Timeout')); }, 15000);
       function cleanup() { delete window[cb]; try { if (script.parentNode) script.parentNode.removeChild(script); } catch(e){} clearTimeout(timer); }
       window[cb]     = d => { cleanup(); resolve(d); };
       script.onerror = () => { cleanup(); reject(new Error('Network error')); };
       script.src = API + '?' + new URLSearchParams(p);
-      (document.head || document.body).appendChild(script);
+      (document.body || document.head).appendChild(script);
     });
   }
 
