--- a/attendance.html
+++ b/attendance.html
@@ -370,7 +370,7 @@
       const jsonpUrl = API + '?' + new URLSearchParams(p);
       const script = document.createElement('script');
       script.async = true;
-      const timer = setTimeout(() => { cleanup(); reject(new Error('Timeout')); }, 20000);
+      const timer = setTimeout(() => { cleanup(); reject(new Error('Timeout')); }, 15000);
       function cleanup() {
         delete window[cb];
         try { if (script.parentNode) script.parentNode.removeChild(script); } catch(e) {}
@@ -379,7 +379,7 @@
       window[cb]     = data => { cleanup(); resolve(data); };
       script.onerror = ()   => { cleanup(); reject(new Error('Network error')); };
       script.src = jsonpUrl;
-      (document.head || document.body).appendChild(script);
+      (document.body || document.head).appendChild(script);
     });
   }
 
